[package]
name    = "ghopac"
version = "0.1.0"
authors = ["NDH <nharward@users.noreply.github.com>"]

[dependencies]
hubcaps          = "0.3.12"
hyper            = "0.10.12"
hyper-native-tls = "0.2.4"
serde            = "1.0.11"
serde_derive     = "1.0.11"
serde_json       = "1.0.2"
spmc             = "0.2.2"
xdg              = "2.1.0"
