[package]
name        = "ghopac"
description = GitHub Organization Pull And Clone
version     = "0.1.0"
authors     = ["NDH <nharward@users.noreply.github.com>"]
license     = "GPL-3.0"
repository  = https://github.com/nharward/ghopac
readme      = README.md
keywords    = ["git", "github", "organization"]
categories  = ["command-line-utilities", "development-tools"]

[dependencies]
hubcaps          = "0.3.12"
hyper            = "0.10.12"
hyper-native-tls = "0.2.4"
serde            = "1.0.11"
serde_derive     = "1.0.11"
serde_json       = "1.0.2"
slog             = "2.0"
slog-async       = "2.1"
slog-term        = "2.1"
spmc             = "0.2.2"
xdg              = "2.1.0"
